// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button Text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots Card Theme Dark 1`] = `
<section
  className="Card Card_theme_dark"
>
  <div
    className="Card-main"
  >
    <div
      className="Card-icon"
    >
      <div
        className="CardIcon"
      />
    </div>
    <div
      className="Card-content"
    >
      <div
        className="Card-header"
      >
        <h1>
          Хлопья с молоком
        </h1>
        <time>
          вчера, 19.00
        </time>
      </div>
      <div
        className="Card-description"
      >
        <p>
          Vladimir Volkov
        </p>
        <p>
          Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
        </p>
      </div>
    </div>
  </div>
  <div
    className="Card-tags"
  >
     
    <span
      className="Tag Tag_size_s Tag_theme_light"
    >
      сахар
    </span>
    <span
      className="Tag Tag_size_s Tag_theme_light"
    >
      соль
    </span>
    <span
      className="Tag Tag_size_s Tag_theme_light"
    >
      молоко
    </span>
     
  </div>
</section>
`;

exports[`Storyshots Card With Body 1`] = `
<section
  className="Card Card_theme_light"
>
  <div
    className="Card-main"
  >
    <div
      className="Card-icon"
    >
      <div
        className="CardIcon"
      />
    </div>
    <div
      className="Card-content"
    >
      <div
        className="Card-header"
      >
        <h1>
          Хлопья с молоком
        </h1>
        <time>
          вчера, 19.00
        </time>
      </div>
      <div
        className="Card-description"
      >
        <p />
        <p />
        <ul
          style={
            Object {
              "listStyle": "none",
            }
          }
        >
          <h3>
            состав: 
          </h3>
          <li>
            морковь 12гр
          </li>
          <li>
            морковь 12гр
          </li>
          <li>
            морковь 12гр
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="Card-tags"
  >
     
    <span
      className="Tag Tag_size_s Tag_theme_dark"
    >
      сахар
    </span>
    <span
      className="Tag Tag_size_s Tag_theme_dark"
    >
      соль
    </span>
    <span
      className="Tag Tag_size_s Tag_theme_dark"
    >
      молоко
    </span>
     
  </div>
</section>
`;

exports[`Storyshots Card With Description 1`] = `
<section
  className="Card Card_theme_light"
>
  <div
    className="Card-main"
  >
    <div
      className="Card-icon"
    >
      <div
        className="CardIcon"
      />
    </div>
    <div
      className="Card-content"
    >
      <div
        className="Card-header"
      >
        <h1>
          Хлопья с молоком
        </h1>
        <time>
          вчера, 19.00
        </time>
      </div>
      <div
        className="Card-description"
      >
        <p>
          Vladimir Volkov
        </p>
        <p>
          Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
        </p>
      </div>
    </div>
  </div>
  <div
    className="Card-tags"
  >
     
    <span
      className="Tag Tag_size_s Tag_theme_dark"
    >
      сахар
    </span>
    <span
      className="Tag Tag_size_s Tag_theme_dark"
    >
      соль
    </span>
    <span
      className="Tag Tag_size_s Tag_theme_dark"
    >
      молоко
    </span>
     
  </div>
</section>
`;

exports[`Storyshots Card Without Description 1`] = `
<section
  className="Card Card_theme_light"
>
  <div
    className="Card-main"
  >
    <div
      className="Card-icon"
    >
      <div
        className="CardIcon"
      />
    </div>
    <div
      className="Card-content"
    >
      <div
        className="Card-header"
      >
        <h1>
          Хлопья с молоком
        </h1>
        <time>
          вчера, 19.00
        </time>
      </div>
      <div
        className="Card-tags"
      >
         
        <span
          className="Tag Tag_size_s Tag_theme_dark"
        >
          сахар
        </span>
        <span
          className="Tag Tag_size_s Tag_theme_dark"
        >
          соль
        </span>
        <span
          className="Tag Tag_size_s Tag_theme_dark"
        >
          молоко
        </span>
         
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots CardIcon Card Icon 1`] = `
<div
  className="CardIcon"
/>
`;

exports[`Storyshots CollectionIcon Default Collection Icon 1`] = `
<div
  className="CollectionIcon"
>
  <div
    className="CollectionIcon-description"
  >
    cахар
  </div>
</div>
`;

exports[`Storyshots Section Theme Dark 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "width": "410px",
    }
  }
>
  <div
    className="Section Section_theme_dark Section_footer_arrow"
  >
    <h2
      className="Tag Tag_size_m Tag_type_headline Section-headline"
    >
      just a headline
    </h2>
    <div
      className="Section-mainContent"
    >
      <section
        className="Card Card_theme_light"
      >
        <div
          className="Card-main"
        >
          <div
            className="Card-icon"
          >
            <div
              className="CardIcon"
            />
          </div>
          <div
            className="Card-content"
          >
            <div
              className="Card-header"
            >
              <h1>
                Хлопья с молоком
              </h1>
              <time>
                вчера, 19.00
              </time>
            </div>
            <div
              className="Card-description"
            >
              <p />
              <p>
                Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
              </p>
            </div>
          </div>
        </div>
        <div
          className="Card-tags"
        >
           
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            сахар
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            соль
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            молоко
          </span>
           
        </div>
      </section>
      <section
        className="Card Card_theme_light"
      >
        <div
          className="Card-main"
        >
          <div
            className="Card-icon"
          >
            <div
              className="CardIcon"
            />
          </div>
          <div
            className="Card-content"
          >
            <div
              className="Card-header"
            >
              <h1>
                Хлопья с молоком
              </h1>
              <time>
                вчера, 19.00
              </time>
            </div>
            <div
              className="Card-description"
            >
              <p />
              <p>
                Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
              </p>
            </div>
          </div>
        </div>
        <div
          className="Card-tags"
        >
           
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            сахар
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            соль
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            молоко
          </span>
           
        </div>
      </section>
      <section
        className="Card Card_theme_light"
      >
        <div
          className="Card-main"
        >
          <div
            className="Card-icon"
          >
            <div
              className="CardIcon"
            />
          </div>
          <div
            className="Card-content"
          >
            <div
              className="Card-header"
            >
              <h1>
                Хлопья с молоком
              </h1>
              <time>
                вчера, 19.00
              </time>
            </div>
            <div
              className="Card-description"
            >
              <p />
              <p>
                Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
              </p>
            </div>
          </div>
        </div>
        <div
          className="Card-tags"
        >
           
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            сахар
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            соль
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            молоко
          </span>
           
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Section Theme Light 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "width": "410px",
    }
  }
>
  <div
    className="Section Section_theme_light Section_footer_arrow"
  >
    <h2
      className="Tag Tag_size_m Tag_type_headline Section-headline"
    >
      just a headline
    </h2>
    <div
      className="Section-mainContent"
    >
      <section
        className="Card Card_theme_light"
      >
        <div
          className="Card-main"
        >
          <div
            className="Card-icon"
          >
            <div
              className="CardIcon"
            />
          </div>
          <div
            className="Card-content"
          >
            <div
              className="Card-header"
            >
              <h1>
                Хлопья с молоком
              </h1>
              <time>
                вчера, 19.00
              </time>
            </div>
            <div
              className="Card-description"
            >
              <p />
              <p>
                Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
              </p>
            </div>
          </div>
        </div>
        <div
          className="Card-tags"
        >
           
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            сахар
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            соль
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            молоко
          </span>
           
        </div>
      </section>
      <section
        className="Card Card_theme_light"
      >
        <div
          className="Card-main"
        >
          <div
            className="Card-icon"
          >
            <div
              className="CardIcon"
            />
          </div>
          <div
            className="Card-content"
          >
            <div
              className="Card-header"
            >
              <h1>
                Хлопья с молоком
              </h1>
              <time>
                вчера, 19.00
              </time>
            </div>
            <div
              className="Card-description"
            >
              <p />
              <p>
                Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
              </p>
            </div>
          </div>
        </div>
        <div
          className="Card-tags"
        >
           
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            сахар
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            соль
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_dark"
          >
            молоко
          </span>
           
        </div>
      </section>
      <section
        className="Card Card_theme_dark"
      >
        <div
          className="Card-main"
        >
          <div
            className="Card-icon"
          >
            <div
              className="CardIcon"
            />
          </div>
          <div
            className="Card-content"
          >
            <div
              className="Card-header"
            >
              <h1>
                Хлопья с молоком
              </h1>
              <time>
                вчера, 19.00
              </time>
            </div>
            <div
              className="Card-description"
            >
              <p />
              <p>
                Вкусные хлопья с молоком на завтрак. Довольно таки легки в
приготовлении, очень полезны и питательны. 
              </p>
            </div>
          </div>
        </div>
        <div
          className="Card-tags"
        >
           
          <span
            className="Tag Tag_size_s Tag_theme_light"
          >
            сахар
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_light"
          >
            соль
          </span>
          <span
            className="Tag Tag_size_s Tag_theme_light"
          >
            молоко
          </span>
           
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag L Size 1`] = `
<span
  className="Tag Tag_size_l"
  onClick={[Function]}
>
  сахар
</span>
`;

exports[`Storyshots Tag M Size 1`] = `
<span
  className="Tag Tag_size_m"
  onClick={[Function]}
>
  сахар
</span>
`;

exports[`Storyshots Tag S Size 1`] = `
<span
  className="Tag Tag_size_s"
  onClick={[Function]}
>
  сахар
</span>
`;

exports[`Storyshots Tag Type Button 1`] = `
<button
  className="Tag Tag_size_l Tag_type_button"
  onClick={[Function]}
>
  сахар
</button>
`;

exports[`Storyshots Tag Type Component 1`] = `
<span
  className="Tag Tag_size_s Tag_type_component"
  onClick={[Function]}
>
  сахар
</span>
`;

exports[`Storyshots Tag Type Headline 1`] = `
<h2
  className="Tag Tag_size_m Tag_type_headline"
  onClick={[Function]}
>
  сахар
</h2>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  style={
    Object {
      "backgroundColor": "#fff",
      "color": "#000",
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "padding": 15,
    }
  }
>
  <h1>
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/1-Button.stories.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the 
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
